# BHASVIC-RayaDimitrova24

./: README.md
Encapsulation/: Cleaner.java  Customer.java  Hotel.java  Main.java  Manager.java  README  Receptionist.java  Room.java
Four in a Row game/: Board.java  Console.java  Main.java  Player.java  README
Hotel-Kashyyyk-group-7/: CMakeLists.txt  Check-In.c  README  README.md  check out.c
Inheritance and Abstract Methods/: Animal.java  Bat.java  Gorilla.java  Main.java  Mammal.java  Otter.java  README  Reptile.java  Snake.java  Tortoise.java  Turtle.java
OOP fundamentals/: Account.java  Bank.java  Console.java  Main.java  README
Polymorphism/: Circle.java  Main.java  README  Rectangle.java  Shape.java  Triangle.java
animalshared/: README  README.md
c-chapter1-intro-BHASVIC-RayaDimitrova24/: CMakeLists.txt  README.md  Starter Code - Chapter 1.c  Student Work - Chapter 1 - Intro to C.pptx  Supporting Documentation - Chapter 1.pptx  main.c
c-chapter2-selection-ifstatements-BHASVIC-RayaDimitrova24/: CMakeLists.txt  README.md  Starer Code - Chapter 2a.c  Starter Code - Chapter 2b.c  Student Work - Chapter 2b - ifStatements - ANDOR.pptx  Student Work -Chapter 2a- ifStatements.pptx  (+2 more)
c-chapter4-iteration-BHASVIC-RayaDimitrova24/: CMakeLists.txt  README.md  Starter Code - Chapter 4a.c  Starter Code - Chapter 4b.c  Student Work - Chapter 4a - While.pptx  Student Work - Chapter 4b - DoWhile.pptx  Student Work - Chapter 4c- For.pptx  Supporting Documentation - Chapter 4ab - While.pptx  Supporting Documentation - Chapter 4c - For.pptx  chapter4.c  main.c  task.c
(+65 files in other folders)
