cmake_minimum_required(VERSION 3.28)
project(c_chapter4_iteration_BHASVIC_RayaDimitrova24 C)

set(CMAKE_C_STANDARD 11)

add_executable(c_chapter4_iteration_BHASVIC_RayaDimitrova24 Starter Code - Chapter 4b.c "task.c" chapter4.c
        "Starter Code - Chapter 4b.c"
        "Starter Code - Chapter 4b.c"
        "Starter Code - Chapter 4b.c"
        "Starter Code - Chapter 4c.c"
        task.c)
